<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_background"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/buttonhighscore"
        android:fontFamily="@font/saiyan_sans"
        android:textColor="@color/MediumBlue"
        android:text="@string/stat_button"
        android:gravity="center"
        android:clickable="true"
        android:textSize="30dp"
        android:background="@drawable/blankbutton"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="370dp"
        android:background="@drawable/design"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/blast_logo" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/transitions_container">
    <ImageButton
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/play_button"
        app:srcCompat="@drawable/testplaybtn" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/buttonEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/easy_button"
            android:visibility="gone"
            android:clickable="false"
            app:srcCompat="@drawable/blueball1" />

        <ImageButton
            android:id="@+id/buttonMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/medium_button"
            android:visibility="gone"
            android:clickable="false"
            app:srcCompat="@drawable/blueball2" />

        <ImageButton
            android:id="@+id/buttonHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/hard_button"
            android:visibility="gone"
            android:clickable="false"
            app:srcCompat="@drawable/blueball3" />
    </LinearLayout>

    </LinearLayout>


</LinearLayout>