<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/space_background"
    android:paddingTop="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saiyan_sans"
        android:gravity="center"
        android:textColor="@color/MediumBlue"
        android:textSize="70sp"
        android:text="@string/stat"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saiyan_sans"
        android:gravity="center"
        android:textColor="@color/MediumBlue"
        android:textSize="45sp"
        android:text="@string/highscore"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="center"
            android:text="@string/first"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="start"
            android:paddingLeft="5dp"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="center"
            android:text="@string/second"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="start"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="center"
            android:text="@string/third"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="start"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/saiyan_sans"
        android:textSize="45sp"
        android:textColor="@color/MediumBlue"
        android:text="@string/total"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="center"
            android:text="@string/total_games_played"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/total_games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="end"
            android:paddingRight="5dp"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="center"
            android:text="@string/total_score"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/total_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="end"
            android:paddingRight="5dp"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="center"
            android:text="@string/total_ki_blasts"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/total_ki_blasts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="end"
            android:paddingRight="5dp"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="center"
            android:text="@string/total_enemy_hit"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/total_enemy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="end"
            android:paddingRight="5dp"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/saiyan_sans"
        android:textColor="@color/MediumBlue"
        android:textSize="45sp"
        android:text="@string/average"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="center"
            android:text="@string/average_score"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/average_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="end"
            android:paddingRight="5dp"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="center"
            android:text="@string/average_blasts"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/average_blasts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="end"
            android:paddingRight="5dp"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="center"
            android:text="@string/average_hits"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/average_hit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/saiyan_sans"
            android:gravity="end"
            android:paddingRight="5dp"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25sp" />
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/high_menu_button"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/menubtn"/>


</LinearLayout>