<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/try_again"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/try_again"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_sign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_light"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center"
            android:fontFamily="@font/saiyan_sans"
            android:text="New"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/high_score_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingLeft="5dp"
            android:fontFamily="@font/saiyan_sans"
            android:text="@string/highscore"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/high_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:fontFamily="@font/saiyan_sans"
            android:text="Test"
            android:textColor="@android:color/white"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/saiyan_sans"
            android:paddingTop="15dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:text="@string/score"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:fontFamily="@font/saiyan_sans"
            android:paddingTop="15dp"
            android:text="Test"
            android:paddingRight="5dp"
            android:textColor="@android:color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/menu_button"
            app:srcCompat="@drawable/menubtn"
            />

        <ImageButton
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play_button"
            app:srcCompat="@drawable/playbtn" />

    </LinearLayout>

</LinearLayout>